# ProxyRP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
asset/config/: global.config.json  graphics.config.json
asset/global/: rendering.global.json
asset/level/: proxy.level.json
asset/objects/: mesh_test.object.json  proxy_camera.object.json  proxy_manager.object.json
asset/objects/basic/: capsule.object.json  cone.object.json  convexmesh.object.json  (+3 more)
asset/world/: proxy.world.json
src/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
src/core/: logger.h  macro.h  math.h  reflection.h
src/header_tool/: CMakeLists.txt  main.cpp
src/header_tool/common/: namespace.h  schema_module.h
src/header_tool/cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
src/header_tool/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
src/header_tool/language_types/: class.cpp  class.h  enum.cpp  enum.h  field.cpp  field.h  method.cpp  method.h  type_info.cpp  type_info.h
src/header_tool/meta/: meta_info.cpp  meta_info.h  meta_utils.cpp  meta_utils.h
src/header_tool/parser/: parser.cpp  parser.h
src/header_tool/template/: template_manager.cpp  template_manager.h
src/platform/: string.cpp  string.h
src/precompile/: include_directories.txt  precompile.cmake  precompile.txt
src/runtime/: CMakeLists.txt  engine.cpp  engine.h  main.cpp
src/runtime/core/: macro.h
src/runtime/core/log/: log_system.cpp  log_system.h
src/runtime/core/math/: angle.cpp  angle.h  axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_const.h  math_reflection.cpp  math_reflection.h  math_serializer.cpp  math_serializer.h  matrix.h  quaternion.h  transform.h  vector.h
src/runtime/core/reflection/: macro.h  reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
src/runtime/core/serializer/: serializer.cpp  serializer.h  serializer_base.h
src/runtime/function/framework/component/: component.cpp  component.h
src/runtime/function/framework/component/animation/: animation_component.cpp  animation_component.h
src/runtime/function/framework/component/camera/: camera_component.cpp  camera_component.h
src/runtime/function/framework/component/components/: mesh_component.h
src/runtime/function/framework/component/light/: light_component.cpp  light_component.h  point_light_component.cpp  point_light_component.h
src/runtime/function/framework/component/mesh/: mesh_component.cpp  mesh_component.h  skeletal_mesh_component.cpp  static_mesh_component.cpp
src/runtime/function/framework/component/transform/: transform_component.cpp  transform_component.h
src/runtime/function/framework/level/: level.cpp  level.h
src/runtime/function/framework/object/: game_object.cpp  game_object.h  object_id_allocator.cpp  object_id_allocator.h
src/runtime/function/framework/world/: world_manager.cpp  world_manager.h
src/runtime/function/global/: global_context.cpp  global_context.h
src/runtime/function/input/: input_system.cpp  input_system.h
src/runtime/function/proxy/: proxy_action.h  proxy_camera.h  proxy_component.cpp  proxy_component.h  proxy_header.h  proxy_manager.cpp  proxy_manager.h  proxy_manager_component.cpp  proxy_manager_component.h  proxy_object.h  proxy_rpc.cpp  proxy_rpc.h  proxy_ui.h
src/runtime/function/render/: deferred_renderer.h  guid_allocator.h  light.h  material.h  render_camera.cpp  render_camera.h  render_common.h  render_entity.h  render_mesh.h  render_object.h  render_pass.cpp  render_pass.h  render_pipeline.cpp  render_pipeline.h  render_resource.cpp  render_resource.h  render_resource_loader.cpp  render_resource_loader.h  render_resource_manager.cpp  render_resource_manager.h  render_resources.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  render_util.cpp  render_util.h  renderer.h  rhi.cpp  rhi.h  rhi_definition.h  rhi_resource.h  rhi_struct.h  scene_proxy.cpp  scene_proxy.h  scene_renderer.cpp  scene_renderer.h  (+8 more)
src/runtime/function/render/passes/: directional_light_pass.cpp  directional_light_pass.h  main_pass.cpp  main_pass.h  mesh_pass.cpp  mesh_pass.h  point_light_pass.cpp  point_light_pass.h  render_pass_common.cpp  render_pass_common.h  skybox_pass.cpp  skybox_pass.h  tone_mapping_pass.cpp  tone_mapping_pass.h  ui_pass.cpp  ui_pass.h
src/runtime/function/render/pipeline/: forward_pipeline.cpp  forward_pipeline.h
src/runtime/function/render/renderer/: deferred_renderer.h  forward_renderer.cpp  forward_renderer.h
src/runtime/function/render/vulkan_rhi/: vulkan_rhi.cpp  vulkan_rhi.h  vulkan_rhi_converter.cpp  vulkan_rhi_converter.h  vulkan_rhi_resources.h  vulkan_util.cpp  vulkan_util.h  vulkan_vma.cpp
src/runtime/function/ui/: window_system.cpp  window_system.h  window_ui.h
src/runtime/platform/: platform.h  string.h
src/runtime/platform/file/: file_manager.cpp  file_manager.h
src/runtime/resource/asset/: asset_data.h  asset_manager.cpp  asset_manager.h  asset_registry.cpp  asset_registry.h
src/runtime/resource/config/: config_manager.cpp  config_manager.h  engine_config.cpp  engine_config.h
src/runtime/resource/loader/: model_loader.cpp  model_loader.h  texture_loader.h
src/runtime/resource/res_type/common/: level.h  object.h  world.h
src/runtime/resource/res_type/components/: camera.h
src/runtime/resource/res_type/data/: material.h  mesh.h  model.h  texture.cpp  texture.h
src/runtime/resource/res_type/global/: global_rendering.h
src/runtime/temp/: learn_vulkan.cpp
src/shaders/: CMakeLists.txt  TestPS.spirv  TestShader.hlsl  TestVS.spirv  compile_shader.bat  compile_shader_glsl.bat  directional_light_shadow.hlsl  mesh.hlsl  point_light_shadow.hlsl  post_process.hlsl  shader.frag  shader.vert  skybox.hlsl  tone_mapping.hlsl
src/temp/: learn_vulkan.cpp
src/template/: all_reflection.h.mustache  all_serializer.h.mustache  all_serializer.ipp.mustache  common_reflection.h.mustache  common_serializer.h.mustache
(+45 files in other folders)
